Fix nidx use in archived name usage mappers